# cpp-cmake-devops

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  mymath_8cpp.html  mymath_8cpp__incl.map  mymath_8cpp__incl.md5  mymath_8h.html  mymath_8h__dep__incl.map  mymath_8h__dep__incl.md5  mymath_8h_source.html  pages.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-build.yml  cmake-release.yml
example/: demo.cpp
include/: mymath.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
src/: main.cpp  mymath.cpp
test/: mymath_tests.cpp
